# Text-to-Pyspark-MultiAgent-System

./: .gitignore  Readme.md  const.py  main.py  pyproject.toml  scratch.ipynb  scratch2.ipynb
chroma_db/metadata/: chroma.sqlite3
chroma_db/metadata_huggingface/: chroma.sqlite3
data/: actors_EN.csv  column_metadata.json  movie_actors_EN.csv  movies_EN.csv  ratings_EN.csv  relational_database.parquet  users_EN.csv
graph/: state.py
graph/chains/: code_evaluator_chain.py  grade_retrieval_chain.py  pyspark_code_generator_chain.py
graph/chains/prompts/: code_evaluator_prompt.py  grade_retrieval_prompt.py  pyspark_code_generator_prompt.py  variable_name_extractor_prompt.py
graph/nodes/: code_evaluator_node.py  code_executor_node.py  grade_retrival_node.py  human_code_check_node.py  human_column_eval_node.py  pyspark_code_generator_node.py  retrieval_node.py
graph/tools/: code_exec_tool.py  spark_manager.py
ingestion/: langchain_ingestion.ipynb  retrieval.py
scripts/: ingestion1.ipynb  ingestion2.ipynb
